--- a/bookshelf/bookshelfLogin.html
+++ b/bookshelf/bookshelfLogin.html
@@ -162,7 +162,7 @@
 		localStorage.setItem("user", auth.currentUser.email);
 		localStorage.setItem("pass", globalPasswordEn);
 
-        window.open("file:///C:/Users/matgo/Documents/GitHub/mattigoofy.github.io/bookshelf/bookshelf.html","_self");
+        window.open("/bookshelf.html","_self");
 	}
 
 
