--- a/bookshelf/bookshelf.html
+++ b/bookshelf/bookshelf.html
@@ -122,7 +122,7 @@
 				readColors();
 			} else {
 				document.getElementById("boeken").style.display = "none";
-				window.open("/bookshelfLogin.html","_self");
+				window.open("bookshelfLogin.html","_self");
 			}
 		})
 
