--- a/bookshelf/bookshelf.html
+++ b/bookshelf/bookshelf.html
@@ -746,7 +746,7 @@
 		document.getElementById("closeSettingsBtn").addEventListener('click', function() {closeSettingNav();})
 		function closeSettingNav() {
 			document.getElementById("settingSideBar").style.width = "0";
-			document.getElementById("settingsOpener").style.width = "100%";
+			document.getElementById("settingsOpener").style.width = "250px";
 			readSettings();
 		}
 
@@ -759,7 +759,7 @@
 		document.getElementById("closeFriendBtn").addEventListener('click', function() {closeFriendNav();})
 		function closeFriendNav() {
 			document.getElementById("friendSideBar").style.width = "0";
-			document.getElementById("friendsOpener").style.width = "10%";
+			document.getElementById("friendsOpener").style.width = "250px";
 		}
 	</script>
 </body>
