--- a/bookshelf/bookshelfLogin.html
+++ b/bookshelf/bookshelfLogin.html
@@ -126,8 +126,8 @@
 					amountPerShelf: "10",
 					minHeight: "150px",
 					maxHeight: "250px",
-					orientation: "upright",
-					initials: "true"
+					flat: false,
+					initials: true
 				});
 				loggedIn();
 			}
