--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 	<a class="pages" href="doomsday.html">Doomsday trainer</a> <br><br>
-	<a class="pages" href="encrypt.html">encrypt</a>
+	<a class="pages" href="encrypt.html">encrypt</a> <br><br>
+	<a class="pages" href="bookshelf">bookshelf</a>
 </body>
 </html>
