--- a/index.html
+++ b/index.html
@@ -4,10 +4,34 @@
 <head>
   <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
   <title>index</title>
+  <style>
+	body {
+		background-color: rgba(60, 59, 59, 0.768);
+		text-align: center;
+		padding-top: 2%;
+	}
+	h1 {
+		margin-bottom: 5%;
+		font-size: 500%;
+	}
+	.pages {
+		color: darkgray;
+		font-size:xx-large;
+		border: solid;
+		border-color: rgba(240, 248, 255, 0.678);
+		border-radius: 2px;
+		padding: 0.3%;
+		min-width: 20%;
+		background-color: rgba(42, 41, 41, 0.768);
+	}
+  </style>
 </head>
 <body>
-	<a class="pages" href="doomsday.html">Doomsday trainer</a> <br><br>
-	<a class="pages" href="encrypt.html">encrypt</a> <br><br>
-	<a class="pages" href="bookshelf">bookshelf</a>
+	<h1>welcome</h1>
+	<div id="container">
+		<a class="pages" href="doomsday.html">Doomsday trainer</a> <br><br>
+		<a class="pages" href="encrypt/encrypt.html">encrypt</a> <br><br>
+		<a class="pages" href="bookshelf/bookshelf.html">bookshelf</a>
+	</div>
 </body>
 </html>
