--- a/index.html
+++ b/index.html
@@ -14,15 +14,30 @@
 		margin-bottom: 5%;
 		font-size: 500%;
 	}
-	.pages {
+	a {
+		display: inline-block;
 		color: darkgray;
 		font-size:xx-large;
 		border: solid;
 		border-color: rgba(240, 248, 255, 0.678);
 		border-radius: 2px;
 		padding: 0.3%;
-		min-width: 20%;
+		width: 20%;
 		background-color: rgba(42, 41, 41, 0.768);
+		margin-bottom: 0.5%;
+	}
+	a:link { 
+		text-decoration: none; 
+	}
+	a:visited {
+		color: rgb(116, 86, 86);		
+	}
+	a.pages:hover {
+		/* background-color: rgba(74, 73, 73, 0.768); */
+		border-radius: 10px;
+		font-size: 300%;
+		width: 30%;
+		margin-bottom: 0;
 	}
   </style>
 </head>
