--- a/doomsday.html
+++ b/doomsday.html
@@ -104,7 +104,7 @@
   }
 
   function next() {
-    var date = generateDate(new Date(1500,5,3), new Date());
+    date = generateDate(new Date(1500,5,3), new Date());
     document.getElementById("date").innerHTML = date.getDate() + " " + months[date.getMonth()] + " " + date.getFullYear();
     document.getElementById("ans").innerHTML = "";
 
