--- a/doomsday.html
+++ b/doomsday.html
@@ -8,8 +8,8 @@
 <style>
     h1 {text-align: center; color:white;}
     body{ background-color: #080710;}
-    button {width: 7%; border-radius:30em;border: solid; boder-color: white; background-color: black;}
-    button:hover {width: 7%; border-radius:30em;border: solid; boder-color: white; background-color: black; opacity:0.6;}
+    button {width: 7%; border-radius:30em;border: solid; boder-color: white; background-color: black;color:white;}
+    button:hover {width: 7%; border-radius:30em;border: solid; boder-color: white; background-color: black; opacity:0.6;color:white;}
     #stoptxt {color: grey;}
     #next {display: none;}
     #start {display: block; width: 100%; height: 10 0%;}
