--- a/bookshelf/bookshelfLogin.html
+++ b/bookshelf/bookshelfLogin.html
@@ -179,7 +179,7 @@
 		localStorage.setItem("user", auth.currentUser.email);
 		localStorage.setItem("pass", globalPasswordEn);
 
-        window.open("bookshelf.html","_self");
+        window.open("chooseShelf.html","_self");
 	}
 
 
