--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <body>
 	<h1>welcome</h1>
 	<div id="container">
-		<a class="pages" href="doomsday.html">Doomsday trainer</a> <br><br>
+		<a class="pages" href="doomsday/doomsday.html">Doomsday trainer</a> <br><br>
 		<a class="pages" href="encrypt/encrypt.html">encrypt</a> <br><br>
 		<a class="pages" href="bookshelf/chooseShelf.html">bookshelf</a>
 	</div>
