login page change name

--- a/bookshelf/index.html
+++ b/bookshelf/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
   <script>
-    window.open("bookshelf.html","_self");
+    window.open("chooseShelf.html","_self");
   </script>
 </html>
