--- a/bookshelf/movieshelf.html
+++ b/bookshelf/movieshelf.html
@@ -150,7 +150,7 @@
 				addSelectFilter();
 			} else {
 				document.getElementById("boeken").style.display = "none";
-				window.open("movieshelfLogin.html","_self");
+				window.open("shelfLogin.html","_self");
 			}
 		})
 
